--- a/src/pages/Auth/Forgot/Forgot.module.css
+++ b/src/pages/Auth/Forgot/Forgot.module.css
@@ -32,3 +32,19 @@
   gap: 20px;
   margin-top: 25px;
 }
+
+@media (max-width: 600px) {
+  .wrapper {
+    padding: 20px;
+  }
+  .form > h1 {
+    margin-top: 40px;
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .form > .fieldWrapper > .buttonWrapper {
+    gap: 14px;
+    margin-top: 20px;
+  }
+}
