--- a/src/pages/Auth/Login/Login.module.css
+++ b/src/pages/Auth/Login/Login.module.css
@@ -85,3 +85,35 @@
   color: var(--blue);
   cursor: pointer;
 }
+
+@media (max-width: 600px) {
+  .wrapper {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .form > h1 {
+    margin-top: 40px;
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .form > .divider {
+    margin: 24px 0;
+  }
+  .form > .fieldWrapper > .buttonWrapper {
+    margin-top: 20px;
+  }
+  .form > .socMedia {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 16px;
+    margin-top: 40px;
+    width: 100%;
+  }
+
+  .form > .signup {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
