--- a/src/pages/Auth/Reset/Reset.module.css
+++ b/src/pages/Auth/Reset/Reset.module.css
@@ -33,6 +33,20 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
   margin-top: 25px;
+}
+
+@media (max-width: 600px) {
+  .wrapper {
+    padding: 20px;
+  }
+  .form > h1 {
+    margin-top: 40px;
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .form > .fieldWrapper > .buttonWrapper {
+    margin-top: 20px;
+  }
 }
